adding endpoint for returning complete enterprise info
