# api/swagger/swagger.yaml
@@ -23,7 +23,7 @@ paths:
     get:
       description: Returns all social enterprises in the directory
       # call this method name on the controller
-      operationId: getAll
+      operationId: getAllEnterprisesPublic
       parameters:
         - name: offset
           in: query
@@ -58,9 +58,9 @@ paths:
   /enterprise/{id}:
     x-swagger-router-controller: enterprise.controller
     get:
-      description: Returns one social enterprises in the directory
+      description: Returns one social enterprise in the directory
       # call this method name on the controller
-      operationId: getOne
+      operationId: getOneEnterprisePublic
       parameters:
         - name: id
           in: path
@@ -71,9 +71,29 @@ paths:
         "200":
           description: Success
           schema:
-            # a pointer to a definition
             $ref: "#/definitions/EnterprisePublic"
-        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+
+  /enterprise/{id}/complete:
+    x-swagger-router-controller: enterprise.controller
+    get:
+      description: Returns *all* details about one social enterprise in the directory
+      # call this method name on the controller
+      operationId: getOneEnterpriseComplete
+      parameters:
+        - name: id
+          in: path
+          description: ID of enterprise to fetch
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/EnterpriseComplete"
         default:
           description: Error
           schema:
@@ -82,6 +102,8 @@ paths:
 
 # complex objects have schema definitions
 definitions:
+
+  # public view of an enterprise
   EnterprisePublic:
     required:
       - id
@@ -124,6 +146,31 @@ definitions:
         items:
            $ref: "#/definitions/Coordinates"
 
+  # full view of an enterprise (incl private fields)
+  EnterpriseComplete:
+    allOf:
+      - $ref: '#/definitions/EnterprisePublic' # inherit all the public fields
+      - properties:
+          parent_organization:
+            type: string
+          contact_person:
+            type: array
+            items:
+              type: string
+          annual_revenue_range:
+            type: string
+          clusters:
+            type: array
+            items:
+              type: string
+          segments:
+            type: array
+            items:
+              type: string
+          stage_of_development:
+            type: string
+          
+  
   PhoneNumber:
     required:
       - number
